# DITHAS

./: CMakeLists.txt  README.md  install_sophus.sh  package.xml
config/: body2cam.yaml  cmp_gt.rviz  consensus.rviz  lidar_cam.rviz  plane.rviz  vis_bags.rviz
include/dithas/: dbscan.hpp  lidar_common.h  se3_solver.h  sophus_se3.h  traj_buffer.h  utils.h
launch/: ceres_solver.launch  cmp_gt.launch  consensus_solver.launch  lidar_cam_solver.launch  plane_segment.launch  pose_ceres_solver.launch  vis_bag.launch  vis_bags.launch  vis_paths.launch
src/: centralized_solver.cpp  consensus_solver.cpp  ground_truth.cpp  lidar_common.cpp  lidar_plane_seg.cpp  pose_solve.cpp  se3_solver.cpp  tag2odom.cpp  tag2path.cpp  tag2pose.cpp  test_solve.cpp  utils.cpp
